# open-journalism-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  ai_signals.py  backfill_new_orgs.py  log_report.py  open_journalism_bot.py  pyproject.toml
.claude/: CLAUDE.md
docs/plans/: 2026-02-19-empty-repo-handling-design.md  2026-02-19-empty-repo-handling-impl.md  2026-03-10-repo-metadata-and-claude-summary.md
docs/superpowers/plans/: 2026-03-11-db-based-repo-detection.md
templates/: post.bak  post.mustache
tests/: conftest.py  test_db.py  test_integration.py
